# sdl2-pong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: audio.h  collision.cpp  collision.h  config.h  engine.cpp  engine.h  entity.h  font.h  main.cpp  mathutils.h  particle.h  shell.html  texture.h  timestate.cpp  timestate.h  vec2.h
